--- a/index.html
+++ b/index.html
@@ -2649,7 +2649,7 @@
                       </div>
                       <div class="elementor-element elementor-element-ea04ed8 ob-harakiri-inherit ob-has-background-overlay elementor-widget elementor-widget-heading ob-harakiri" data-id="ea04ed8" data-element_type="widget" data-settings="{&quot;_ob_use_harakiri&quot;:&quot;yes&quot;,&quot;_ob_harakiri_writing_mode&quot;:&quot;inherit&quot;,&quot;_ob_harakiri_text_clip&quot;:&quot;none&quot;,&quot;_ob_perspektive_use&quot;:&quot;no&quot;,&quot;_ob_poopart_use&quot;:&quot;yes&quot;,&quot;_ob_shadough_use&quot;:&quot;no&quot;,&quot;_ob_allow_hoveranimator&quot;:&quot;no&quot;,&quot;_ob_widget_stalker_use&quot;:&quot;no&quot;}" data-widget_type="heading.default">
                         <div class="elementor-widget-container">
-                          <h2 class="elementor-heading-title elementor-size-default">The real behind DOGE</h2>
+                          <h2 class="elementor-heading-title elementor-size-default">The real dog behind DOGE</h2>
                         </div>
                       </div>
                       <div class="elementor-element elementor-element-c234dcf ob-harakiri-inherit ob-has-background-overlay elementor-widget elementor-widget-heading ob-harakiri" data-id="c234dcf" data-element_type="widget" data-settings="{&quot;_ob_use_harakiri&quot;:&quot;yes&quot;,&quot;_ob_harakiri_writing_mode&quot;:&quot;inherit&quot;,&quot;_ob_harakiri_text_clip&quot;:&quot;none&quot;,&quot;_ob_perspektive_use&quot;:&quot;no&quot;,&quot;_ob_poopart_use&quot;:&quot;yes&quot;,&quot;_ob_shadough_use&quot;:&quot;no&quot;,&quot;_ob_allow_hoveranimator&quot;:&quot;no&quot;,&quot;_ob_widget_stalker_use&quot;:&quot;no&quot;}" data-widget_type="heading.default">
