--- a/index.html
+++ b/index.html
@@ -2870,8 +2870,8 @@
                                       <div class="elementor-counter">
                                         <div class="elementor-counter-number-wrapper">
                                           <span class="elementor-counter-number-prefix"></span>
-                                          <span class="elementor-counter-number" data-duration="2000" data-to-value="100" data-from-value="0" data-delimiter=",">100</span>
-                                          <span class="elementor-counter-number-suffix">M</span>
+                                          <span class="elementor-counter-number" data-duration="2000" data-to-value="1000000000" data-from-value="0" data-delimiter=",">1</span>
+                                          <span class="elementor-counter-number-suffix"> B</span>
                                         </div>
                                         <div class="elementor-counter-title">SUPPLY</div>
                                       </div>
