--- a/index.html
+++ b/index.html
@@ -2867,11 +2867,11 @@
                                           line-height: 2.5
                                         }
                                       </style>
-                                      <div class="elementor-counter">
+                                      <div class="elementor-counter" >
                                         <div class="elementor-counter-number-wrapper">
-                                          <span class="elementor-counter-number-prefix"></span>
-                                          <span class="elementor-counter-number" data-duration="2000" data-to-value="1000000000" data-from-value="0" data-delimiter=",">1</span>
-                                          <span class="elementor-counter-number-suffix"> B</span>
+                                          <span class="elementor-counter-number-prefix" ></span>
+                                          <span class="elementor-counter-number" style="font-size:42px;" data-duration="2000" data-to-value="1000000000" data-from-value="0" data-delimiter=",">1</span>
+                                          <span class="elementor-counter-number-suffix" style="font-size:42px;" > B</span>
                                         </div>
                                         <div class="elementor-counter-title">SUPPLY</div>
                                       </div>
